<resources>
    <string name="app_name">Bulkes</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="resume_game">Game is on pause</string>
    <string name="game_over">You lose. Try again</string>
    <string name="end_game">Are You sure that\n you want to leave?</string>
    <string name="pause_game">Game paused</string>
    <string name="tableN">N</string>
    <string name="tableName">Name</string>
    <string name="tableTime">Time</string>
    <string name="tablePoint">Point</string>
    <string name="settings_header">Settings</string>
    <string name="totalGameTime">Total game time:</string>
    <string name="maxGameScore">Max game score:</string>
    <string name="title_activity_splash_screen" translatable="false">splashScreen</string>
    <string name="training">Training</string>
    <string name="max_score">Max Score</string>
    <string name="total_time">Total Time</string>
    <string name="duel">Duel</string>
    <string name="max_point">Max Point</string>
    <string name="best_time">Best time</string>
    <string name="survival">Survival</string>
    <string name="resume">Resume</string>
    <string name="yes">Leave</string>
    <string name="no_but">Continue</string>
    <string name="repeat">Repeat</string>
    <string name="tooltipSetting">Main options of game</string>
    <string name="tooltipInfo">Info about game</string>
    <string name="tooltipDiagram">Diagram of game\'s steps</string>
    <string name="tooltipTable">Best scores</string>
    <string name="nickname">Nickname</string>
    <string name="bulk_color">Bulk color</string>
    <string name="black_background">Black background</string>
    <string name="game_time">Game time</string>
    <string name="diagram_legend">Player\'s mass</string>
    <string name="digramm_shot">Chart saved</string>
    <string name="diagram_top">Player\'s progress</string>
    <string name="diagram_axix">Game time</string>
    <string name="player_table_position">Position</string>
    <string name="player_table_name">Name</string>
    <string name="player_table_scores">Scores</string>
    <string name="player_table_time">Time</string>
    <string name="check_internet_access">Please check Internet access</string>
    <string name="connection_time_out">Connection timeout</string>
    <string name="receive_user_data_error">Can`t receive user`s data</string>
    <string name="back">Back</string>
    <string name="game_authors">Game authors</string>
    <string name="mohnachov">Vladislav Mohnachov</string>
    <string name="elagin">Igor Elagin</string>
</resources>