<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTranslucent">

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardCornerRadius="10dp"
        card_view:cardPreventCornerOverlap="false"
        style="@style/CardView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/headerAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMarengo"
                android:text="@string/game_authors"
                android:textSize="25sp"
                android:autoText="true"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/creators"
                android:layout_below="@+id/headerAbout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorMarengo"
                    android:text="@string/mohnachov"
                    android:textSize="20sp"
                    android:autoText="true"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorMarengo"
                    android:text="@string/elagin"
                    android:textSize="20sp"
                    android:autoText="true"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <Button
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/back_btn"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/creators"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>