<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/end_game_layout"
    android:background="@color/colorTranslucent">
    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor = "@color/colorWhite"
        card_view:cardCornerRadius="10dp"
        card_view:cardPreventCornerOverlap = "false"
        style="@style/CardView"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/end_game_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMarengo"
                android:text="@string/end_game"
                android:textSize="20sp"
                android:autoText="true"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/end_game_text"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <Button
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/yes_btn"

                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/end_game_text"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />

                <Button
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_but"
                    android:id="@+id/no_btn"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/end_game_text"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>