<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bulkes.myapplication2.FocusableImageButton
        android:id="@+id/closeTableBtn"
        android:src="@drawable/close_btn"
        android:scaleType="centerCrop"
        android:background="@color/colorFull_transparent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="9dp" />

    <com.bulkes.myapplication2.FocusableImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/table_refresh"
        android:id="@+id/refreshTableBtn"
        android:scaleType="centerCrop"
        android:background="@color/colorFull_transparent"
        android:layout_above="@+id/progressTableLayout"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="5dp" />

    <com.bulkes.myapplication2.FocusableImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/table_steps"
        android:id="@+id/toFirstPositionBtn"
        android:scaleType="centerCrop"
        android:background="@color/colorFull_transparent"
        android:layout_above="@+id/progressTableLayout"
        android:layout_toRightOf="@+id/refreshTableBtn"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/closeTableBtn">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/borderTable"
            android:background="@color/colorLightGray" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:id="@+id/dataGettingProgressBar"
            android:indeterminate="true"
            android:progressDrawable="@drawable/indeterminate_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:visibility="visible" />
    </LinearLayout>
    <TableLayout
        android:id="@+id/progressTableLayout"
        android:stretchColumns="*"
        android:layout_width="fill_parent"
        android:layout_below="@+id/closeTableBtn"
        android:layout_height="@dimen/table_row_height"
        android:layout_marginTop="20dp">

        <TableRow
            android:id="@+id/tableRowId"
            android:layout_width="wrap_content"
            android:minHeight="@dimen/table_row_height"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/firstColumnText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/player_table_position"
                android:gravity="center_horizontal|center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/secondColumnText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/player_table_name"
                android:gravity="center_horizontal|center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/thirdColumnText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/player_table_scores"
                android:gravity="center_horizontal|center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/fourthColumnText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/player_table_time"
                android:gravity="center_horizontal|center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/gameTableList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/progressTableLayout"></android.support.v7.widget.RecyclerView>
</RelativeLayout>
